# ok_galg

./: .README.md.kate-swp  README.md
ok_galg/: CMakeLists.txt  galg.h
ok_galg/include/ok_galg/: galg.h  indiv.h
tsp/: CMakeLists.txt  config.yaml  tsp.py
tsp/include/: travel.h  travel.h.autosave
tsp/main/: tsp.cpp
tsp/src/: travel.cpp
